@@ -3,7 +3,7 @@
 #include "Helpers.fxh"
 
 float4 vColor_Intensity;
-float3 vRes_Alpha;
+float4 vRes_Alpha_time;
 
 texture Texture0;
 
@@ -83,35 +83,46 @@ float4 ps_main_DMD_no(in VS_OUTPUT IN) : COLOR
 }
 #endif
 
+float nrand(float2 uv)
+{
+   return frac(sin(dot(uv, float2(12.9898, 78.233))) * 43758.5453);
+}
+
+#if 0
+float gold_noise(in float2 xy, in float seed)
+{
+   return frac(tan(distance(xy * 1.61803398874989484820459, xy) * seed) * xy.x); // tan is usually slower than sin/cos
+}
+#endif
+
 float4 ps_main_DMD(in VS_OUTPUT IN) : COLOR
 {
-   const float2 ddxs = ddx(IN.tex0)*0.4; // use ddx and ddy to help the oversampling below/make filtering radius dependent on projected 'dot'/texel
-   const float2 ddys = ddy(IN.tex0)*0.4;
+   const float blur = 0.75; // 0.5..1.0 looks best (between sharp and blurry)
+   const float2 ddxs = ddx(IN.tex0); // use ddx and ddy to help the oversampling below/make filtering radius dependent on projected 'dots'/texel
+   const float2 ddys = ddy(IN.tex0);
+
+   const float2 offs = float2(nrand(IN.tex0 + vRes_Alpha_time.w), nrand(IN.tex0 + (2048.0 + vRes_Alpha_time.w))); // random offset for the oversampling
 
    // brute force oversampling of DMD-texture and especially the dot-function (using 25 samples)
    float3 color2 = float3(0., 0., 0.);
-   [unroll] for(int j = -2; j <= 2; ++j)
+
+   const int samples = 13; //4,8,9,13,21,25,32 korobov,fibonacci
+   [unroll] for (int i = 0; i < samples; ++i) // oversample the dots
    {
-   const float2 uvj = IN.tex0 + float(j)*ddys; 
-   [unroll] for (int i = -2; i <= 2; ++i)
-   {
-      const float2 uv = uvj + float(i)*ddxs;
+      const float2 uv = IN.tex0 + (frac(i* (1.0 / samples) + offs.x)*(2.*blur)-blur)*ddxs + (frac(i* (8.0 / samples) + offs.y)*(2.*blur)-blur)*ddys; //1,5,2,8,13,7,7 korobov,fibonacci
 
       const float4 rgba = tex2Dlod(texSampler0, float4(uv, 0., 0.)); //!! lots of tex access by doing this all the time, but (tex) cache should be able to catch all of it
-      float3 color = vColor_Intensity.xyz * vColor_Intensity.w; //!! create function that resembles LUT from VPM?
-      if (rgba.a != 0.0)
-         color *= rgba.bgr;
-      else
-         color *= rgba.b * (255.9 / 100.);
 
       // simulate dot within the sampled texel
-      const float2 dist = frac(uv*vRes_Alpha.xy)*2.2 - 1.1;
-      const float d = dist.x*dist.x + dist.y*dist.y;
+      const float2 dist = frac(uv*vRes_Alpha_time.xy)*2.2 - 1.1;
+      const float d = smoothstep(0., 1., 1.0 - sqr(dist.x*dist.x + dist.y*dist.y));
 
-      color2 += color*smoothstep(0., 1., 1.0 - d*d);
+      if (rgba.a != 0.0)
+         color2 += rgba.bgr * d;
+      else
+         color2 += rgba.b * (255.9 / 100.) * d;
    }
-   }
-   color2 *= 1./25.;
+   color2 *= vColor_Intensity.xyz * (vColor_Intensity.w/samples); //!! create function that resembles LUT from VPM?
 
    /*float3 colorg = float3(0,0,0);
    [unroll] for(int j = -1; j <= 1; ++j)
@@ -123,7 +134,7 @@ float4 ps_main_DMD(in VS_OUTPUT IN) : COLOR
    //if (rgba.b > 200.0)
    //   return float4(InvToneMap(InvGamma(min(color2,float3(1.5,1.5,1.5))/*+colorg*/)), 0.5);
    //else
-   return float4(InvToneMap(InvGamma(color2/*+colorg*/)), vRes_Alpha.z); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
+   return float4(InvToneMap(InvGamma(color2/*+colorg*/)), vRes_Alpha_time.z); //!! meh, this sucks a bit performance-wise, but how to avoid this when doing fullscreen-tonemap/gamma without stencil and depth read?
 }
 
 float4 ps_main_noDMD(in VS_OUTPUT IN) : COLOR
